# claude-code-assistant

./: CHANGELOG.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  package.json  tauri.conf.json
.cargo/: config.toml
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-03-28-claude-code-assistant-implementation.md
docs/superpowers/specs/: 2026-03-28-claude-code-desktop-assistant-design.md
src/: lib.rs  main.rs
src-ui/: README.md  index.html  main.js  styles.css
src-ui/components/: Card.js  Dashboard.js  Modal.js  Toast.js  index.js
src/commands/: config.rs  mod.rs  permissions.rs  profiles.rs  projects.rs  quick_commands.rs  skills.rs
src/models/: config.rs  mod.rs  permission.rs  profile.rs  project.rs  quick_command.rs  skill.rs
src/services/: claude_service.rs  config_service.rs  file_service.rs  mod.rs  project_service.rs
src/utils/: mod.rs  paths.rs  validators.rs
